--- a/translations/messages+intl-icu.es.yaml
+++ b/translations/messages+intl-icu.es.yaml
@@ -3,7 +3,7 @@ Kodea: Código
 'Izen Abizenak': 'Nombre y apellidos'
 Kargua: Cargo
 Mahaia: Mesa
-mezua: 'Es conveniente que consultes el manual de instrucciones editado por el Gobierno Vasco.'
+mezua: 'Es conveniente que consultes el manual de instrucciones editado por el Gobierno.'
 Euskaraz: Euskaraz
 Erdaraz: Castellano
 'Erabiltzaile izena': 'Nombre de usuario'
