--- a/translations/messages+intl-icu.eu.yaml
+++ b/translations/messages+intl-icu.eu.yaml
@@ -3,7 +3,7 @@ Kodea: Kodea
 'Izen Abizenak': 'Izen Abizenak'
 Kargua: Kargua
 Mahaia: Mahaia
-mezua: 'Komenigarria da Eusko Jaurlaritzak argitaratutako jarraibideen eskuliburua kontsultatzea.'
+mezua: 'Komenigarria da Gobernuak argitaratutako jarraibideen eskuliburua kontsultatzea.'
 Euskaraz: Euskaraz
 Erdaraz: Erdaraz
 'Erabiltzaile izena': 'Erabiltzaile izena'
